deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-deployment
spec:
  replicas: 1  # Number of NGINX pods to run
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: cithit/neredis:latest                            #<-------change this to match your MiamiID.
        ports:
        - containerPort: 80  # Expose NGINX on port 80      
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules: 
  - host: 
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend: 
          service:
            name: prod-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: prod-service
spec:
  type: LoadBalancer 
  loadBalancerIP: 10.48.228.113                                    # <-----change this to match your load balancer IP!!!!
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: nginx apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-deployment
spec:
  replicas: 1  # Number of NGINX pods to run
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: cithit/roseaw:latest                             #<----change this!
        ports:
        - containerPort: 80  # Expose NGINX on port 80      
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules: 
  - host: 
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend: 
          service:
            name: prod-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: prod-service
spec:
  type: LoadBalancer 
  loadBalancerIP: 10.48.229.45                                     # <-----change this!!!!
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: nginx
